<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ALC Notes</string>

    <string name="action_delete_all_entries">Delete All Notes</string>
    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_note_successful">Note saved</string>
    <string name="editor_insert_note_failed">Error saving note</string>
    <string name="editor_update_note_successful">Note updated</string>
    <string name="editor_update_note_failed">Error updating note</string>
    <string name="saving_changes_dialog_text">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_delete_failed">Error deleting Note</string>
    <string name="delete_dialog_msg">Delete this Note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="note_title_hint">Title</string>
    <string name="note_body_hint">Notes</string>
    <string name="cloud_activity_title">Cloud Notes</string>
    <string name="auth_label">Sign In</string>
    <string name="activity_note_reader">Reader</string>
    <string name="welcome_message">make your dairy secure and convenient</string>
    <string name="bg">activity_login_bg</string>
    <string name="no_entry">No entry</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="get_started_by_adding_notes">get started by adding notes</string>
    <string name="login_text_alc">ALC</string>
    <string name="login_text_notes">Notes</string>
    <string name="login_text_sign_in">Sign In</string>
    <string name="login_text_for_free">for free</string>
    <string name="login_text_authenticating">Authenticating &#8230;</string>

</resources>
